--- a/public/css/items.scss
+++ b/public/css/items.scss
@@ -49,15 +49,14 @@
         font-size:    1em;
         font-weight:  bold;
         .month {
-          display: inline;
+          @include inlineBlock();
         }
         .day {
-          display: inline;
+          @include inlineBlock();
           padding: 0 0.25em;
         }
         .day-of-week {
           display: block;
-          position: absolute;
           font-size: 0.8em;
           font-weight: bold;
           // Raise it above .status, which MAY have an opaque background
